hphp/test/slow/reified-generics/new-static-3.php.expectf
Fatal error: Cannot call new static since class%?{ B} has reified generics in %s on line 6
